--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thedinindu.github.io/Neon_Web_Theme_ReactJS/",
   "dependencies": {
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
@@ -17,6 +18,8 @@
     "@types/styled-components": "^5.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
